[gd_scene load_steps=14 format=3 uid="uid://bja8soerass2i"]

[ext_resource type="Texture2D" uid="uid://cc34ebigbes40" path="res://art/sprites.png" id="1_7aqh4"]
[ext_resource type="Texture2D" uid="uid://yc15gb6yrrqt" path="res://art/campfire.png" id="2_crmxo"]
[ext_resource type="Script" uid="uid://dywwwa6ypwayg" path="res://scripts/camp.gd" id="3_nawe8"]
[ext_resource type="FontFile" uid="uid://ds3387fh4y7fs" path="res://art/CONCHARS.png" id="4_40kdf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("2_crmxo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5newe"]
atlas = ExtResource("2_crmxo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s47"]
atlas = ExtResource("2_crmxo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt5mj"]
atlas = ExtResource("2_crmxo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1j6l"]
atlas = ExtResource("2_crmxo")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pl11u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5newe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37s47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt5mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1j6l")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aqh4"]
size = Vector2(83, 24)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pl11u"]

[sub_resource type="LabelSettings" id="LabelSettings_bhx41"]
font = ExtResource("4_40kdf")
font_size = 8
font_color = Color(0.94902, 0.941176, 0.898039, 1)

[node name="Camp" type="Node2D" node_paths=PackedStringArray("uiOrigin")]
z_index = -10
script = ExtResource("3_nawe8")
uiOrigin = NodePath("UIOrigin")

[node name="Tent" type="Sprite2D" parent="."]
position = Vector2(28, -12)
texture = ExtResource("1_7aqh4")
region_enabled = true
region_rect = Rect2(48, 120, 56, 24)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_pl11u")
autoplay = "default"
frame_progress = 0.243928

[node name="Area" type="Area2D" parent="."]
position = Vector2(-29, -19)
collision_layer = 2049
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2(40.5, 7)
shape = SubResource("RectangleShape2D_7aqh4")

[node name="UIOrigin" type="Node2D" parent="."]
position = Vector2(28, -27)

[node name="UI" type="Control" parent="UIOrigin"]
layout_mode = 3
anchors_preset = 0
offset_left = -102.0
offset_top = -18.0
offset_right = 3.0
offset_bottom = -2.0

[node name="NinePatchRect" type="NinePatchRect" parent="UIOrigin/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7aqh4")
region_rect = Rect2(52, 180, 10, 9)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 5
patch_margin_bottom = 4

[node name="StartRound" type="Button" parent="UIOrigin/UI"]
z_index = 700
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 110.0
offset_bottom = 13.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_pl11u")
flat = true

[node name="Label" type="Label" parent="UIOrigin/UI/StartRound"]
layout_mode = 0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 9.0
text = "START ROUND?"
label_settings = SubResource("LabelSettings_bhx41")

[connection signal="body_entered" from="Area" to="." method="_player_entered_area"]
[connection signal="body_exited" from="Area" to="." method="_player_exited_area"]
[connection signal="button_down" from="UIOrigin/UI/StartRound" to="." method="start_round"]
